--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.braincode2019"
     android:targetSandboxVersion="1">
     <!--
@@ -20,7 +21,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PopUpDataPicker"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -43,6 +43,10 @@
         <activity
             android:name=".Pop"
             android:label="Choose Locaton"
+            android:theme="@style/MyStyle" />
+        <activity
+            android:name=".PopUpDataPicker"
+            android:label="Choose Data"
             android:theme="@style/MyStyle" />
     </application>
 
